--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,11 @@
     </head>
     <body>
 
-    {% block body %}{% endblock %}
+        <header>
+            {% include('_navbar.html.twig') %}
+        </header>
+
+        {% block body %}{% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
