--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,5 +1,9 @@
 // customize some Bootstrap variables
-$primary: darken(#428bca, 20%);
+$primary: #ffde22;
+$secondary: #ff8928;
+$tertiary: #ff414e;
+$quaternary: #000000;
+$quinary: #ffffff;
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
