--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,16 @@
 @import "global.scss";
 
 body {
-    background-color: white;
+    background-color: $primary;
+    font-family: $fontSecondary;
+
+    h1 {
+        font-family: "Anton", sans-serif;
+        text-align: center;
+    }
+}
+
+// NAVBAR STYLING
+.navbar {
+    font-family: $fontPrimary;
 }
