--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -14,7 +14,7 @@
                     <a class="nav-link text-dark" href="#">{{ app.user.email }}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="{{ path('app_logout') }}"> Se déconnecter</a>
+                    <a class="nav-link text-dark" href="{{ path('app_logout') }}"> Sign out</a>
                 </li>
             {% endif %}
         </ul>
