added flash messages on project manipulation

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,20 @@
             {% include('_navbar.html.twig') %}
         </header>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    {% for category, messages in app.flashes %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{ category }}">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+
         <section class="container body-block">
             {% block body %}{% endblock %}
         </section>
