--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -36,4 +36,13 @@ body {
     font-family: $fontPrimary;
 }
 
-// LOGIN STYLING
+// ADMIN STYLING
+// ADMIN PROJECT STYLING
+.index-delete form button {
+    border: none;
+    text-decoration: none;
+    color: $tertiary;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+}
