tech entity and crud added

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -6,6 +6,7 @@
     <h1>Admin Index</h1>
     <ul>
         <li><a href="{{ path('admin_project_index') }}">Project list</a></li>
+        <li><a href="{{ path('admin_tech_index') }}">Tech list</a></li>
     </ul>
 
 {% endblock %}
