added dependency fixtures to projects and techs

--- a/templates/admin/project/index.html.twig
+++ b/templates/admin/project/index.html.twig
@@ -32,7 +32,7 @@
                 <td>{{ project.link }}</td>
                 <td>
                     {% for tech in project.techs %}
-                        {{ tech.name }}
+                        <div>{{ tech.name }}</div>
                     {% endfor %}
                 </td>
                 <td>
