--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,6 +7,7 @@
     <ul>
         <li><a href="{{ path('admin_project_index') }}">Project list</a></li>
         <li><a href="{{ path('admin_tech_index') }}">Tech list</a></li>
+        <li><a href="{{ path('admin_picture_index') }}">Picture list</a></li>
     </ul>
 
 {% endblock %}
