--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,9 +35,10 @@
             {% block body %}{% endblock %}
         </section>
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+
+        {{ encore_entry_script_tags('app') }}
+
+        {% block javascripts %}{% endblock %}
 
     </body>
 </html>
