added liip to manage picture sizes

--- a/templates/admin/picture/show.html.twig
+++ b/templates/admin/picture/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Picture</th>
-                <td><img src="{{ vich_uploader_asset(picture, 'urlFile') }}"></td>
+                <td><img src="{{ vich_uploader_asset(picture, 'urlFile') | imagine_filter('thumb') }}"></td>
             </tr>
         </tbody>
     </table>
