--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,7 +1,7 @@
 // customize some Bootstrap variables
-$primary: #ffde22;
-$secondary: #ff8928;
-$tertiary: #ff414e;
+$primary: #8FA880;
+$secondary: #FA9A50;
+$tertiary: #BC7642;
 $quaternary: #000000;
 $quinary: #ffffff;
 
