--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-lg bg-primary navbar-light ">
+<nav class="navbar navbar-expand-lg navbar-light ">
     <a class="navbar-brand" href="{{ path('app_home') }}">JEFFEOS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <ul class="navbar-nav  mt-2 mt-lg-0">
             <li class="nav-item">
                 <a class="nav-link text-dark" href="#">BIO</a>
             </li>
