--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
     </head>
     <body>
 
+    <div class="body-frame">
         <header>
             {% include('_navbar.html.twig') %}
         </header>
@@ -34,7 +35,7 @@
         <section class="container body-block">
             {% block body %}{% endblock %}
         </section>
-
+    </div>
 
         {{ encore_entry_script_tags('app') }}
 
