--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,7 +1,7 @@
 // customize some Bootstrap variables
-$primary: #8FA880;
-$secondary: #FA9A50;
-$tertiary: #BC7642;
+$primary: #F1C40F;
+$secondary: #28B463;
+$tertiary: #1D8348;
 $quaternary: #000000;
 $quinary: #ffffff;
 
