--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,16 +10,17 @@
     </div>
 
     <section class="project-section">
-        <div class="d-flex">
+        <h2>PROJECTS</h2>
+        <div class="row">
             {% for project in projects %}
                 {# Slice the array of pictures and retrieve the first object picture for vich display #}
                 {% for picture in project.pictures[:1]  %}
-                    <a href="#">
-                        <div class="col-sm-12 col-md-5 col-lg-4 card project-card">
-                            <img class="card-img-top" src="{{ vich_uploader_asset(picture, 'urlFile') | imagine_filter('thumb') }}" alt="Card image cap">
+                    <a class="col-sm-12 col-lg-4 d-flex align-items-stretch" href="#">
+                        <div class="card project-card">
+                            <img class="card-img-top" src="{{ vich_uploader_asset(picture, 'urlFile') | imagine_filter('home_project') }}" alt="Card image cap">
                             <div class="card-body">
-                                <h3>{{ project.name }}</h3>
-                                <p class="card-text">{{ project.description }}</p>
+                                <h3 class="text-center">{{ project.name }}</h3>
+                                <p class="card-text text-justify">{{ project.description }}</p>
                             </div>
                         </div>
                     </a>
