added footer with important links to github and linkedin

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,7 @@
 
         <section class="container body-block">
             {% block body %}{% endblock %}
+            {% include('_footer.html.twig') %}
         </section>
     </div>
 
