--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav  mt-2 mt-lg-0">
             <li class="nav-item">
-                <a class="nav-link text-dark" href="#">BIO</a>
+                <a class="nav-link text-dark" href="{{ path('app_contact_new') }}">CONTACT ME</a>
             </li>
             {% if app.user %}
                 <li class="nav-item">
