--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -8,6 +8,7 @@
         <li><a href="{{ path('admin_project_index') }}">Project list</a></li>
         <li><a href="{{ path('admin_tech_index') }}">Tech list</a></li>
         <li><a href="{{ path('admin_picture_index') }}">Picture list</a></li>
+        <li><a href="{{ path('admin_contact_index') }}">Messages (You have {{  messages }} unread message{% if messages > 1 %}s{%endif %})</a></li>
     </ul>
 
 {% endblock %}
