% of tech used on project is retrieve from service and sent to view

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -91,6 +91,11 @@ body {
             .project-card {
                 border-radius: 25px;
 
+                .card-img-top {
+                    border-top-left-radius: 25px;
+                    border-top-right-radius: 25px;
+                }
+
                 .card-text {
                     font-size: 1.2em;
                 }
