--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -8,5 +8,9 @@ $quinary: #ffffff;
 $fontPrimary: 'Anton', sans-serif;
 $fontSecondary: 'Roboto', sans-serif;
 
+// Gradient
+$gradientPrimary: linear-gradient(135deg, #F7DC6F 50%, #F1C40F 70%, #F4D03F);
+$gradientSecondary:  linear-gradient(90deg, $tertiary, $secondary);
+
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
