--- a/templates/contact/new.html.twig
+++ b/templates/contact/new.html.twig
@@ -3,7 +3,9 @@
 {% block title %}CONTACT ME{% endblock %}
 
 {% block body %}
-    <h1>CONTACT ME</h1>
+    <div class="contact-form">
+        <h1>CONTACT ME</h1>
 
-    {{ include('contact/_form.html.twig') }}
+        {{ include('contact/_form.html.twig') }}
+    </div>
 {% endblock %}
