--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -7,17 +7,21 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav  mt-2 mt-lg-0">
             <li class="nav-item">
-                <a class="nav-link text-dark" href="{{ path('app_contact_new') }}">CONTACT ME</a>
+                <a class="nav-link" href="{{ path('app_contact_new') }}">CONTACT ME</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_bio') }}">BIO</a>
+            </li>
+
             {% if app.user %}
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="{{ path('admin_index') }}">ADMIN</a>
+                    <a class="nav-link" href="{{ path('admin_index') }}">ADMIN</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">{{ app.user.email }}</a>
+                    <a class="nav-link" href="#">{{ app.user.email }}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="{{ path('app_logout') }}"> SIGN OUT</a>
+                    <a class="nav-link" href="{{ path('app_logout') }}"> SIGN OUT</a>
                 </li>
             {% endif %}
         </ul>
