--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="project-desc">{{ project.description }}</div>
 
-            {% if project.link is defined %}
+            {% if project.link is not null %}
                 <a href="{{ project.link }}">{{ project.name }} website</a>
             {% else %}
                 <div>Not deployed yet</div>
@@ -49,7 +49,6 @@
             {% for tech in project.techs %}
                 {# Retrieve github picture from entity #}
                 <img class="project-icon" src="{{ vich_uploader_asset(tech.picture, 'urlFile') | imagine_filter('icons') }}" alt="{{ tech.name }}">
-
             {% endfor %}
 
             {% if project.github is defined %}
