fixed issue on project delete - cascade picture

--- a/templates/admin/tech/show.html.twig
+++ b/templates/admin/tech/show.html.twig
@@ -22,5 +22,5 @@
 
     <a href="{{ path('admin_tech_edit', {'id': tech.id}) }}">edit</a>
 
-    {{ include('admin_tech/_delete_form.html.twig') }}
+    {{ include('admin/tech/_delete_form.html.twig') }}
 {% endblock %}
