added twig filter

--- a/templates/admin/project/show.html.twig
+++ b/templates/admin/project/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ project.description }}</td>
+                <td>{{ project.description |raw }}</td>
             </tr>
             <tr>
                 <th>Display</th>
