--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -20,7 +20,7 @@
                             <img class="card-img-top" src="{{ vich_uploader_asset(picture, 'urlFile') | imagine_filter('home_project') }}" alt="{{ picture.name }}">
                             <div class="card-body">
                                 <h3 class="text-center">{{ project.name }}</h3>
-                                <p class="card-text text-justify">{{ project.description }}</p>
+                                <p class="card-text text-justify">{{ project.description |raw }}</p>
                             </div>
                         </div>
                     </a>
