--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -36,7 +36,7 @@
 
     <div class="container project-overview d-flex flex-column">
         <div class="row">
-            <div class="project-desc">{{ project.description }}</div>
+            <div class="project-desc">{{ project.description |raw  }}</div>
 
             {% if project.link is not null %}
                 <a href="{{ project.link }}">{{ project.name }} website</a>
